@@ -1,5 +1,8 @@
 Release CMTK-1.3.0:
 
+- Fixed: consolidated redundant "--switch" and "--exchange" parameters to
+    "warp" tool (Issue #3616]. Also fixed initial transformation missing
+    inversion bug (unreported) for inverse-consistent nonrigid registration.
 - Fixed: if this is supported, default to terminal width for line width in
     cmtk::Console::FormatText
 - Added: image/transformation database support for the following registration
